--- a/src/views/partials/navbar.hbs
+++ b/src/views/partials/navbar.hbs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-dark bg-secondary mb-4">
   <div class="container">
-    <div class="navbar-brand">DataKraken Leyendas</div>
+    <div class="navbar-brand">DataKraken Historias</div>
   </div>
 </nav>
